# Arduino-Sword

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  project-tree
src/: Arduino.c  Arduino.h  ArduinoSimulate.cpp  ArduinoSimulate.h  Makefile  analog_rw.c  digital_rw.c  main.c  pins.c  pins.h  types.h
src/arduino/: Makefile
src/arduino/cores/: Arduino.c  Makefile  analog_rw.c  digital_rw.c  pins.c  pins.h
src/arduino/libraries/: Makefile
src/arduino/libraries/ADXL345/: Makefile  adxl345.c  adxl345.h
src/arduino/libraries/HDC1080/: Makefile  Melody_HDC1080.c  Melody_HDC1080.h
src/arduino/libraries/I2C/: Makefile  i2c-private.h  i2c.c  i2c.h
src/arduino/libraries/I2C_Hardware/: Makefile  i2c_hardware.c  i2c_hardware.h
src/arduino/libraries/LMT84/: Makefile  lmt84.c  lmt84.h
src/arduino/libraries/Wire/: Makefile  Wire.c  Wire.h
src/config/: debug.h  flags.conf  make.global  mips32.ld  tools.conf
src/cores/: Arduino.h  digital_rw.c  pins.c  pins.h  types.h
src/include/: Arduino.h  arch.h  assert.h  inttypes.h  main.h  utils.h  vga.h
src/kernel/: Makefile  init.c
src/kernel/arch/: Makefile  arch.c
src/kernel/driver/: Makefile  vga.c  vga.h
src/kernel/utils/: Makefile  utils.c
src/libraries/I2C/: i2c-private.h  i2c-sample.cpp  i2c.c  i2c.h
src/libraries/Wire/: Wire-sample.cpp  Wire-sample.h  Wire.cpp  Wire.h
src/libraries/Wire/utility/: twi.c  twi.h
